force-app/main/default/objects/InvoiceXL__c/InvoiceXL__c.object-meta.xml
<CustomObject>
    <label>Invoice status</label>
    <nameField>
        <label>Invoice number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Invoice status</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>