force-app/main/default/objects/InvoiceXL__c/fields/Authorized_Accountant__c.field-meta.xml
<CustomField>
    <fullName>Authorized_Accountant__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Authorized Accountant</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Invoice_status1</relationshipName>
    <type>Lookup</type>
</CustomField>