force-app/main/default/objects/InvoiceXL__c/fields/Comment__c.field-meta.xml
<CustomField>
    <fullName>Comment__c</fullName>
    <inlineHelpText>Reason, set on hold time, other</inlineHelpText>
    <label>Comment</label>
    <type>TextArea</type>
</CustomField>