force-app/main/default/objects/InvoiceXL__c/fields/Days_Since_Invoice_Date__c.field-meta.xml
<CustomField>
    <fullName>Days_Since_Invoice_Date__c</fullName>
    <formula>TODAY() - Invoice_date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days Since Invoice Date</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>