force-app/main/default/objects/InvoiceXL__c/fields/Invoice_amount__c.field-meta.xml
<CustomField>
    <fullName>Invoice_amount__c</fullName>
    <label>Invoice amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>