force-app/main/default/objects/InvoiceXL__c/fields/Invoice_pdf__c.field-meta.xml
<CustomField>
    <fullName>Invoice_pdf__c</fullName>
    <formula>HYPERLINK(PDF__c, Name, &quot;_blank&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Invoice pdf</label>
    <type>Text</type>
</CustomField>