force-app/main/default/objects/InvoiceXL__c/fields/PaymentStatusId__c.field-meta.xml
<CustomField>
    <fullName>PaymentStatusId__c</fullName>
    <externalId>true</externalId>
    <label>PaymentStatusId</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>