force-app/main/default/objects/InvoiceXL__c/fields/Set_on_hold__c.field-meta.xml
<CustomField>
    <fullName>Set_on_hold__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Use when payment is to be set on hold.</description>
    <inlineHelpText>Set payment on hold (Pay code/betalingskode in Xledger)</inlineHelpText>
    <label>Set on hold</label>
    <type>Checkbox</type>
</CustomField>