force-app/main/default/objects/InvoiceXL__c/validationRules/Set_on_hold.validationRule-meta.xml
<ValidationRule>
    <fullName>Set_on_hold</fullName>
    <active>true</active>
    <description>If Set on hold is checked then comment is mandatory</description>
    <errorConditionFormula>AND(Set_on_hold__c = TRUE, OR( ISBLANK(Comment__c), ISBLANK(Comment__c)))</errorConditionFormula>
    <errorDisplayField>Comment__c</errorDisplayField>
    <errorMessage>Comment is mandatory when we are to set a payment on hold.</errorMessage>
</ValidationRule>