force-app/main/default/objects/InvoiceXL__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Account_owner__c</columns>
    <columns>Invoice_amount__c</columns>
    <columns>Invoice_date__c</columns>
    <columns>Due_date__c</columns>
    <columns>Remaining_Amount__c</columns>
    <columns>Invoice_pdf__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>NAME</field>
        <operation>equals</operation>
        <value>121956</value>
    </filters>
    <label>All</label>
</ListView>